added new function for handling inMemory queueing