@@ -10,7 +10,6 @@ import com.Lucroar.iQueue.Repository.QueueRepository;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -19,22 +18,24 @@ public class QueueService {
     private final QueueRepository queueRepository;
     private final CustomerRepository customerRepository;
     private final DailySequenceGeneratorService sequenceGenerator;
+    private final InMemoryQueueService inMemoryQueueService;
 
     public QueueService(QueueRepository queueRepository,
                         CustomerRepository customerRepository,
-                        DailySequenceGeneratorService sequenceGenerator) {
+                        DailySequenceGeneratorService sequenceGenerator,
+                        InMemoryQueueService inMemoryQueueService) {
         this.queueRepository = queueRepository;
         this.customerRepository = customerRepository;
         this.sequenceGenerator = sequenceGenerator;
+        this.inMemoryQueueService = inMemoryQueueService;
     }
 
-    //A qr code contains the number of table and the username
     public QueueDTO  createQueue(Customer customer, QueueEntry queueEntry) {
         QueueDTO queueDTO = checkQueue(customer);
         if (queueDTO != null) return null;
         Customer customerCont = customerRepository.findByUsername(customer.getUsername()).get();
         CustomerDTO customerDTO = new CustomerDTO();
-        customerDTO.setCustomerId(customerCont.getCustomerId());
+        customerDTO.setCustomerId(customerCont.getId());
         customerDTO.setUsername(customer.getUsername());
 
         queueEntry.setQueueing_number(sequenceGenerator.generateQueueCode(queueEntry.getNum_people()));
@@ -42,12 +43,13 @@ public class QueueService {
         queueEntry.setStatus(Status.WAITING);
         queueEntry.setWaiting_since(LocalDateTime.now());
         QueueEntry queueEntryEntity = queueRepository.save(queueEntry);
+        inMemoryQueueService.enqueue(queueEntryEntity);
         return new QueueDTO(queueEntryEntity);
     }
 
     //Check if there is an existing queue to a customer
     public QueueDTO checkQueue(Customer customer) {
-        List<Status> targetStatuses = Arrays.asList(Status.CREATED, Status.WAITING);
+        List<Status> targetStatuses = List.of(Status.WAITING);
         Optional<QueueEntry> queueCont = queueRepository.findByCustomerUsernameAndStatusIn(customer.getUsername(), targetStatuses);
         return queueCont.map(QueueDTO::new).orElse(null);
     }
@@ -71,6 +73,20 @@ public class QueueService {
             queueEntryEntity.setStatus(Status.CANCELLED);
             queueRepository.save(queueEntryEntity);
             return new QueueDTO(queueEntryEntity);
+        }
+        return null;
+    }
+
+    //Mark the table as dirty and customer as done
+    public QueueDTO finishedQueue(Customer customer) {
+        Optional<QueueEntry> queueCont = queueRepository.findByCustomerUsernameAndStatusIn(customer.getUsername(), List.of(Status.SEATED));
+        if (queueCont.isPresent()) {
+            QueueEntry queueEntryEntity = queueCont.get();
+            queueEntryEntity.setStatus(Status.DONE);
+            inMemoryQueueService.releaseTable(queueEntryEntity.getTable_number());
+            queueRepository.save(queueEntryEntity);
+            return new QueueDTO(queueEntryEntity);
+
         }
         return null;
     }
